[gd_scene load_steps=14 format=3 uid="uid://b6x7qtbd3t6l3"]

[ext_resource type="PackedScene" uid="uid://d35xym1pgwedw" path="res://src/entities/Entity_Base.tscn" id="1_4l36m"]
[ext_resource type="Texture2D" uid="uid://nyhmvyiyxu4y" path="res://src/assets/sprites/Barrel.png" id="2_smclp"]
[ext_resource type="Script" path="res://src/entities/Barrel.gd" id="2_vlfsc"]
[ext_resource type="Shader" uid="uid://cdkpm6nupvrft" path="res://src/shaders/Flash.tres" id="3_dhii2"]
[ext_resource type="PackedScene" uid="uid://bfw3nnvvia3u5" path="res://src/particles/BarrelTriggerSmoke.tscn" id="3_hk65v"]
[ext_resource type="Shader" path="res://src/entities/BarrelCircle.gdshader" id="5_slvp4"]
[ext_resource type="Texture2D" uid="uid://c1muc5wa2p7fs" path="res://src/assets/sprites/96x96.png" id="7_wewsb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogqew"]
shader = ExtResource("3_dhii2")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_e0acd"]
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrelTriggerSmoke:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Circle:material:shader_parameter/amt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character:material:shader_parameter/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Character:material:shader_parameter/flash_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w5waj"]
resource_name = "triggered"
length = 3.0
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrelTriggerSmoke:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.87), Vector2(1.15, 1.001), Vector2(1, 0.87), Vector2(1.15, 1.001), Vector2(1, 0.87), Vector2(1.15, 1.001), Vector2(1, 0.87), Vector2(1.15, 1.001), Vector2(1, 0.87), Vector2(1.15, 1.001)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Circle:material:shader_parameter/amt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character:material:shader_parameter/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Character:material:shader_parameter/flash_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.164706, 0.145098, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aj6dr"]
_data = {
"RESET": SubResource("Animation_e0acd"),
"triggered": SubResource("Animation_w5waj")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onrih"]
shader = ExtResource("5_slvp4")
shader_parameter/amt = 0.0
shader_parameter/color = Color(1, 0, 0, 0.261637)

[sub_resource type="CircleShape2D" id="CircleShape2D_njasl"]
radius = 48.0

[node name="Barrel" instance=ExtResource("1_4l36m")]
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
script = ExtResource("2_vlfsc")

[node name="HurtBox" parent="." index="0" groups=["enemy_hurtbox"]]

[node name="CollisionShape2d" parent="HurtBox" index="0"]
position = Vector2(0, -1.37022e-07)

[node name="CollisionShape2d" parent="." index="1"]
position = Vector2(0, 2)

[node name="Character" parent="." index="2"]
material = SubResource("ShaderMaterial_ogqew")
position = Vector2(0, 0)
texture = ExtResource("2_smclp")
hframes = 1
vframes = 1

[node name="BarrelAnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_aj6dr")
}

[node name="BarrelTriggerSmoke" parent="." index="5" instance=ExtResource("3_hk65v")]
emitting = false

[node name="Circle" type="Sprite2D" parent="." index="6"]
self_modulate = Color(1, 1, 1, 0.839783)
show_behind_parent = true
material = SubResource("ShaderMaterial_onrih")
z_index = -1
y_sort_enabled = true
texture = ExtResource("7_wewsb")

[node name="HitBox" type="Area2D" parent="." index="7"]

[node name="CollisionShape2d" type="CollisionShape2D" parent="HitBox" index="0"]
visible = false
shape = SubResource("CircleShape2D_njasl")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="BarrelAnimationPlayer" to="." method="_on_barrel_animation_player_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
